[package]
name = "Hyperlinkr"
version = "0.1.0"
edition = "2024"
description = "A URL shortener service built with Rust and Axum"
license = "MIT"
authors = ["Ankit Kumar <ak0182274@gmail.com>"]

[lib]
name = "hyperlinkr"
path = "src/lib.rs"

[features]
libnuma = ["libnuma-sys"]

[dependencies]
axum = {version= "0.8.4", features = ["macros"]}
axum-server = { version = "0.7.2", features = ["tls-rustls"] }

tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.2"
serde_json = "1.0.143"
jsonwebtoken = "9.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.99"
thiserror = "2.0.16"
dotenv = "0.15.0"
moka = { version = "0.12.10", features = ["future", "sync"] }
tower = "0.5.2"
sled = { version = "0.34.7", features = ["compression"] }
base62 = "2.2.2"
config = "0.15.15"
arrayvec = "0.7.6"
parking_lot = "0.12.4"
prometheus = "0.14.0"
fastbloom ={ version ="0.14.0", features = ["serde"] }
futures = "0.3.31"
libnuma-sys = {version ="0.0.9", optional = true}
fred = { version = "10.1.0", features = ["dynamic-pool", "i-all", "transactions"] }
crossbeam-queue = "0.3.12"
bb8 = '0.9.0'
async-trait = "0.1.89"
once_cell = "1.21.3"
rand = '0.9.2'
bincode = "2.0.1"
url = "2.5.7"
cuid = "1.3.3"
bcrypt = "0.17.1"
dashmap = "6.1.0"
maxminddb= "0.26.0"

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3", "const_xxh3"]


[dev-dependencies]
tokio-test = "0.4.4"
test-case = "3.3.1"
criterion = "0.7.0"
reqwest = { version = "0.12.23", features = ["json"] }
serial_test = "3.2.0"

[[bench]]
name = "codegen"
harness = false

[profile.dev]
opt-level = 1                  # Enable some optimizations for dev (faster tests)
debug = true
overflow-checks = true
incremental = true

[profile.bench]
debug = true
opt-level = 3               # Optimize for speed

[profile.release]
opt-level = "z"                # Optimize for binary size
lto = true                     # Link Time Optimization
codegen-units = 1             # Better optimization at the cost of compile time
panic = "abort"                # Reduces binary size
strip = true                   # Strips debug symbols

# Linting configuration with clippy
[lints.clippy]
# Specific lint overrides
unwrap_used = "allow"          # Allow unwrap() for prototyping (revisit for prod)
expect_used = "allow"          # Allow expect() for prototyping
missing_docs = "warn"          # Warn on missing documentation
missing_errors_doc = "warn"    # Warn on missing error docs
missing_panics_doc = "warn"    # Warn on missing panic docs
too_many_arguments = "warn"    # Warn on functions with too many arguments

# Additional strict rules for production readiness
single_use_lifetimes = "deny"  # Prevent unnecessary lifetime annotations
unnecessary_clone = "deny"     # Catch performance issues with cloning
redundant_allocation = "deny"  # Prevent redundant heap allocations
redundant_field_names = "deny" # Enforce concise struct initialization
